# flowcast

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/open_api/: base.http  swagger.yml
docs/use_cases/: video.md
server/: Makefile  README.md  pyproject.toml  requirements.txt
server/docs/open_api/: base.http  open_api.yml
server/src/application/: app.py
server/src/application/handlers/: healthcheck.py  video.py  video_handler.py
server/src/domain/entity/: video.py
server/src/infrastructure/db/clients/: sqlite_client.py
server/src/infrastructure/db/database/: flowcast.db
server/src/infrastructure/db/repositories/: video_repository.py
server/tests/: test_video.py
src/: __init__.py
src/application/: app.py
src/application/handlers/: healthcheck_handler.py  mood_handler.py  video_handler.py
src/domain/entity/: mood.py
src/infrastructure/db/clients/: sqlite_client.py
src/infrastructure/db/database/: flowcast.db  moody.db
src/infrastructure/db/repositories/: mood_repository.py  video_repository.py
tests/unit/: test_mood.py
