[tool.poetry]
name = "flowcast-server"
version = "0.1.0"
description = ""
authors = ["Diego"]
readme = "README.md"
packages = [{include = "flowcast_server"}]

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "2.0.2"
click = "8.1.3"
decorator = "5.1.1"
flask = "2.2.3"
flask_cors = "3.0.10"
iniconfig = "2.0.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.2"
packaging = "23.1"
pluggy = "1.0.0"
pycodestyle = "2.10.0"
pytest = "7.3.1"
six = "1.16.0"
validators = "0.20.0"
werkzeug = "2.2.3"
python-dotenv = "^1.0.0"
setuptools = "^67.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
